<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PianoApp</string>
    <string name="welcome_to_the_music_app">Welcome to the Music App</string>
    <string name="saved_library">Saved library</string>
    <string name="go_to_piano">go to piano</string>
    <string name="settings">Settings</string>
    <string name="piano_description">Piano Description</string>
    <string name="premium">\n\n</string>
    <string name="available_products" />
    <string name="purchase" />
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">sign_in</string>
    <string name="user_profile_image">user_profile_image</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Premium">\n</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_slideshow123" />
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_profile">Profile Activity</string>
    <string name="title_activity_signup">Signup Activity</string>
    <string name="title_activity_register" />
    <string name="title_activity_settings" />
    <string name="title_activity_piano_description" />
    <string name="title_activity_main" />
    <string name="title_activity_in_app_purchase" />
    <string name="sign_up">Sign Up</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="default_web_client_id">701301435922</string>
    <string-array name="country_codes">
        <item>+1 (US)</item>
        <item>+44 (UK)</item>
        <item>+91 (IND)</item>
        <!-- Add more country codes as needed -->
    </string-array>

    <string name="select_language">Select Language</string>
    <string name="records">RECORDS</string>
    <string name="keyboard">KEYBOARD</string>
    <string name="rate_app">Rate App </string>
    <string name="invite_friends">Invite Friends </string>
    <string name="settings1">Settings ️</string>
    <string name="select_languages">Select Language </string>
    <string name="help">Help </string>
    <string name="exit_app">Exit App </string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="help_center">Help Center</string>
    <string name="this_piano_app_provides_a_realistic_piano_playing_experience_you_can_play_your_favorite_songs_learn_how_to_play_the_piano_and_enjoy_music">This piano app provides a realistic piano-playing experience. You can play your favorite songs, learn how to play the piano, and enjoy music.</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="otp_verification">\n\n</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number" />
    <string name="get_otp" />
    <string name="enter_mobile_number" />
    <string name="_84" />
    <string name="_123456789" />
    <string name="enter_the_otp_sent_to" />
    <string name="didn_t_receive_the_otp" />
    <string name="resend_otp" />
    <string name="verificationId">my-piano-39482</string>
    <string name="sunfibo_pvt_ltd">©SUNFIBO PVT.LTD</string>
    <string name="my_piano">MY PIANO</string>
    <string name="verify">verify</string>
    <string name="didnt_receive_the_otp">didnt receive the otp</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_numberr">we_will_send_you_an_one_time_password_on_this_mobile_number</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="logout">Logout</string>
    <string name="otp">OTP</string>
    <string name="phoneNumber" />
    <string name="number_of_keys">Number of Keys:</string>
    <string name="change_theme" />
    <string name="change_theme_to_dark" />
    <string name="themes">Themes</string>
    <string name="change_theme_to_light" />
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="start_record_text" />
    <string name="recording_txt" />
    <string-array name="languages">
        <item>हिन्दी</item>
        <item>मराठी</item>
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>German</item>
        <item>Italian</item>
        <!-- Add more languages as needed -->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="piano_playing_guide">

          <![CDATA[
    Welcome to the Piano Playing Guide!

    Here are some basic instructions on how to play piano chords:

    1. Position your fingers on the keys.
    2. Press the keys gently for a softer sound, or firmly for a louder sound.
    3. Experiment with different combinations to create beautiful melodies.

    Happy playing!
    ]]></string>
    <string name="chords_craft">CHORDS CRAFT</string>
    <string name="send_otp">Send OTP</string>
    <string name="Enter_Phone_Number">enter_mobile_number</string>
    <string name="we_will_send_you_an_one_time_password_on_this_Phone_number">we will send you an one time password on this mobile number</string>
    <string name="sun_fibo_pvt_ltd">sun fibo pvt ltd</string>
    <string name="sun_fibo_technolodgy">sun_fibo_technolodgy</string>
    <string name="sun_fibo_technology">sun fibo technology</string>
    <string name="welcome_to_the_chords_craft">welcome_to_the_chords_craft</string>
    <string name="welcome_to_the_chords_craft2">welcome to the chords craft</string>
    <string name="disclaimer_text">
        By using this virtual piano app, you agree to the terms and conditions outlined in the End User License Agreement (EULA). This app is provided "as is" without any warranties. The developers are not responsible for any damages or liabilities arising from the use of this virtual piano app. Always use the app responsibly and follow applicable laws and regulations.

        If you have any concerns or questions, please contact us at softdevpune@sunfibo.com.
    </string>
    <string name="phone">Phone</string>
    <string name="phone1">phone</string>
    <string name="phon">phon</string>


</resources>